Add global invitation tree in about section

--- a/sic/templates/about.html
+++ b/sic/templates/about.html
@@ -5,4 +5,5 @@
 {% block content %}
     <h1>about sic</h1>
     <p>Source code: <a href="https://github.com/epilys/sic/">https://github.com/epilys/sic/</a></p>
+    <p><a href="{% url 'invitation_tree' %}">User invitation tree</a></p>
 {% endblock %}
