Fix recent comments view not working for anonymous users

--- a/sic/templates/recent_comments.html
+++ b/sic/templates/recent_comments.html
@@ -10,8 +10,8 @@
     <div class="pagination">
         <span class="step-links">
             {% if comments.has_previous %}
-                <a href="{% url 'recent_comments' username=user.username %}">&laquo; first</a>
-                <a href="{% url 'recent_comments_page' username=user.username page_num=comments.previous_page_number %}">&lt; previous</a>
+                <a href="{% url 'recent_comments' %}">&laquo; first</a>
+                <a href="{% url 'recent_comments_page' page_num=comments.previous_page_number %}">&lt; previous</a>
             {% endif %}
 
             <span class="current">
@@ -19,7 +19,7 @@
             </span>
 
             {% if comments.has_next %}
-                <a href="{% url 'recent_comments_page' username=user.username page_num=comments.next_page_number %}">next &gt;</a>
+                <a href="{% url 'recent_comments_page' page_num=comments.next_page_number %}">next &gt;</a>
             {% else %}
                 (of {{comments.number}})
             {% endif %}
