--- a/sic/static/style.css
+++ b/sic/static/style.css
@@ -357,8 +357,7 @@ template {
 
 
 html, body {
-  font-family: sans;
-  font-size: 12px;
+  font-family: sans-serif;
   width: 100%;
   height: 100%;
 }
@@ -386,11 +385,12 @@ main nav>ul{
   list-style: none;
   column-gap: 1rem;
   display: flex;
-  justify-content: space-between;
+  justify-content: space-evenly;
   flex-flow:wrap;
   margin: 0;
   width: max-content;
   padding: 0;
+  max-width: 80vw;
 }
 
 body>main>hr {
@@ -555,86 +555,20 @@ form.submit-comment-form {
 
 
 div.profile {
-  display: grid;
-  grid-template-areas: "username-label username avatar"
-  "homepage-label homepage avatar"
-  "git-repository-label git-repository avatar"
-  "about-label about avatar"
-  "status-label status avatar"
-  "joined-label joined avatar"
-  "invited_by-label invited_by avatar"
-  "karma-label karma avatar"
-  "stories-label stories avatar"
-  "comments-label comments avatar";
+  display: flex;
+  flex-flow: wrap-reverse;
   row-gap: 1rem;
   column-gap: 2rem;
-  height: 100%;
-  width: 100%;
+  max-height: max-content;
+  max-width: max-content;
 }
 
-.profile #label_for_username{
-  grid-area:username-label;
-}
-.profile #username {
-  grid-area: username;
-}
-.profile #label_for_homepage{
-  grid-area: homepage-label;
-}
-.profile #homepage {
-  grid-area: homepage;
-}
-.profile #label_for_git-repository{
-  grid-area: git-repository-label;
-}
-.profile #git-repository {
-  grid-area: git-repository;
-}
-.profile #label_for_about{
-  grid-area: about-label;
-}
-.profile #about {
-  grid-area: about;
-}
-.profile #label_for_status{
-  grid-area: status-label;
-}
-.profile #status {
-  grid-area: status;
-}
-.profile #label_for_joined{
-  grid-area: joined-label;
-}
-.profile #joined {
-  grid-area: joined;
-}
-.profile #label_for_invited_by{
-  grid-area: invited_by-label;
-}
-.profile #invited_by {
-  grid-area: invited_by;
-}
-.profile #label_for_karma{
-  grid-area: karma-label;
-}
-.profile #karma {
-  grid-area: karma;
-}
-.profile #label_for_stories{
-  grid-area: stories-label;
-}
-.profile #stories {
-  grid-area: stories;
-}
-.profile #label_for_comments{
-  grid-area: comments-label;
-}
-.profile #comments {
-  grid-area: comments;
+.profile table {
+  grid-column: 1 / span 1;
 }
 
 .profile #avatar {
-  grid-area: avatar;
+  grid-column: 2 / span 1;
   display: flex;
   flex-direction: column;
   width: max-content;
@@ -1058,4 +992,45 @@ details.formatting-help[open]>span {
   outline: 1px solid Highlight;
   max-width: 40vw;
   overflow: auto;
+}
+
+ul.tree,
+ul.tree ul {
+    list-style: none;
+    margin: 0;
+    padding: 0;
+}
+
+ul.tree ul {
+    margin-left: 10px;
+}
+
+ul.tree li {
+    margin: 0;
+    padding: 0 7px;
+    line-height: 20px;
+    color: #369;
+    font-weight: bold;
+    border-left: 1px solid rgb(100, 100, 100);
+
+}
+
+ul.tree li:last-child {
+    border-left: none;
+}
+
+ul.tree li:before {
+    position: relative;
+    top: -0.3em;
+    height: 1em;
+    width: 12px;
+    color: white;
+    border-bottom: 1px solid rgb(100, 100, 100);
+    content: "";
+    display: inline-block;
+    left: -7px;
+}
+
+ul.tree li:last-child:before {
+    border-left: 1px solid rgb(100, 100, 100);
 }
