--- a/sic/templates/edit_profile.html
+++ b/sic/templates/edit_profile.html
@@ -1,9 +1,11 @@
 {% extends "base.html" %}
 {% block title %}Edit profile{% endblock %}
 {% block content %}
-<form action="" method="post" class="submit-story-form">
-    {% csrf_token %}
-    {{ form }}
-    <input type="submit" value="Submit">
-</form>
+    <form method="post" class="submit-story-form">
+        {% csrf_token %}
+        <table>
+            {{ form }}
+        </table>
+        <input type="submit" value="Submit">
+    </form>
 {% endblock %}
