Put comment source in a dedicated endpoint
Screen readers and text browsers would view both comment and comment
source, which is bad UX.

--- a/sic/templates/comment.html
+++ b/sic/templates/comment.html
@@ -18,11 +18,9 @@
             <span class="score">
                 {{comment.karma}}
             </span>
-        </span> <a href="{{ comment.user.get_absolute_url }}">{{ comment.user }}</a> <time datetime="{{ comment.created | date:"Y-m-d H:i:s" }}" title="{{ comment.created }}">{{ comment.created|naturaltime }}</time> | <a href="{{comment.get_absolute_url}}">link</a> | <label class="reply" for="reply-{{comment.pk}}"><a href="">reply</a></label>{% if show_story %} | on <a href="{{ comment.story.get_absolute_url }}">{{ comment.story.title }}</a>{% endif %} | <label class="toggle-source" for="comment-source-{{comment.pk}}"><a href="">toggle show source</a></label>
+        </span> <a href="{{ comment.user.get_absolute_url }}">{{ comment.user }}</a> <time datetime="{{ comment.created | date:"Y-m-d H:i:s" }}" title="{{ comment.created }}">{{ comment.created|naturaltime }}</time> | <a href="{{comment.get_absolute_url}}">link</a> | <label class="reply" for="reply-{{comment.pk}}"><a href="">reply</a></label>{% if show_story %} | on <a href="{{ comment.story.get_absolute_url }}">{{ comment.story.title }}</a>{% endif %} | <a href="{% url 'comment_source' comment.story.pk 'test' comment.pk %}">source</a>
         </span>
-        <input class="comment-source" type="checkbox" id="comment-source-{{comment.pk}}" name="comment-source-{{comment.pk}}" hidden>
         <span class="comment">{{ comment.text_to_html }}</span>
-        <span class="comment-source">{{ comment.text }}</span>
         {% if request.user.is_authenticated %}
             <input class="reply" type="checkbox" id="reply-{{comment.pk}}" name="reply-{{comment.pk}}" {% if preview %}checked="checked"{% endif %}>
             <form action="{% url 'reply' comment.pk %}" method="POST" class="reply-form">
