--- a/sic/static/style.css
+++ b/sic/static/style.css
@@ -667,7 +667,7 @@ li:hover a.feed:after {
   width: 1rem;
 }
 
-label.reply, label.toggle-source {
+label.reply {
   cursor: pointer;
 }
 
@@ -676,10 +676,10 @@ label.required:after {
     color: red;
 }
 
-.toggle-source a, .reply a {
+.reply a {
   pointer-events: none;
 }
-.toggle-source a:visited, .reply a:visited {
+.reply a:visited {
   color: LinkText;
 }
 
@@ -712,30 +712,10 @@ span.comment {
   padding-top: .5rem;
   padding-bottom: .5rem;
 }
-span.comment-source {
-  display: none;
-  max-width: 66ch;
-  text-align: justify;
-  margin-left: 2rem;
-  margin-top: 1em;
-  margin-bottom: 1em;
-  padding-top: .5rem;
-  padding-bottom: .5rem;
-}
 
 span.comment.preview {
   outline: 1px dotted;
   outline-offset: 2px;
-}
-
-input[type="checkbox"].comment-source:checked~span.comment-source{
-  display: block;
-}
-input[type="checkbox"].comment-source:checked~span.comment{
-  display: none;
-}
-input[type="checkbox"].comment-source:checked~span:first-of-type.comment{
-  display: none;
 }
 
 input[type="checkbox"].comment:checked~span.comment{
@@ -787,9 +767,6 @@ input[type="checkbox"].comment ~ div.replies {
   display: revert;
 }
 input[type="checkbox"].comment:checked ~ div.replies {
-  display: none;
-}
-input[type="checkbox"].comment:checked ~ span.comment-source {
   display: none;
 }
 
