--- a/sic/templates/story.html
+++ b/sic/templates/story.html
@@ -4,12 +4,13 @@
 {% block title %}{{story.title}} - sic {% endblock %}
 {% block content %}
     {% get_comment_preview request None as preview  %}
+    {% story_is_bookmarked request.user story as is_bookmarked %}
     <article>
         <header>
             <h1 class="story-title"><a href="{{story.get_listing_url}}">{{ story.title }}</a></h1>
             {% if story.publish_date %}<div>Published: <time datetime="{{ story.publish_date | date:"Y-m-d" }}" title="{{ story.publish_date }}">{{ story.publish_date|naturalday }}</time></div>{% endif %}
             {% include "story_tags.html" with tags=story.tags.all %}
-            <div class="links">{% if story.user.avatar and show_avatars %}<img class="avatar-small" src="{{story.user.avatar}}" alt="user avatar">{% endif %}{% if story.user_is_author %}authored by{% else %}via{% endif %} <a href="{{ story.user.get_absolute_url }}">{{ story.user }}</a> <time datetime="{{ story.created | date:"Y-m-d H:i:s" }}" title="{{ story.created }}">{{ story.created|naturaltime }}</time> {% if story.user == request.user %}| <a href="{% url 'edit_story' story_pk=story.pk slug=story.slugify %}">edit</a> {% endif%}| flag | hide | save | {% if story.url %}<a rel="nofollow external" href="http://archive.is/timegate/{{ story.url }}">archived copy</a> |{% endif %} <a href="{{story.get_absolute_url}}">{{ story.comments.count }} comments</a></div>
+            <div class="links">{% if story.user.avatar and show_avatars %}<img class="avatar-small" src="{{story.user.avatar}}" alt="user avatar">{% endif %}{% if story.user_is_author %}authored by{% else %}via{% endif %} <a href="{{ story.user.get_absolute_url }}">{{ story.user }}</a> <time datetime="{{ story.created | date:"Y-m-d H:i:s" }}" title="{{ story.created }}">{{ story.created|naturaltime }}</time> {% if story.user == request.user %}| <a href="{% url 'edit_story' story_pk=story.pk slug=story.slugify %}">edit</a> {% endif%}| flag | hide | {% if request.user.is_authenticated %}<a href="{% url_with_next 'bookmark_story' story.pk request %}">{% if is_bookmarked %}un{% endif %}bookmark</a> |{% endif %} {% if story.url %}<a rel="nofollow external" href="http://archive.is/timegate/{{ story.url }}">archived copy</a> |{% endif %} <a href="{{story.get_absolute_url}}">{{ story.comments.count }} comments</a></div>
         </header>
         <a href="{{story.url}}">{{ story.url }}</a>
         {% if story.description %}
