--- a/sic/templates/account.html
+++ b/sic/templates/account.html
@@ -10,6 +10,7 @@
                 <li><a href="{{ user.get_absolute_url }}">view profile</a></li>
                 <li><a href="{% url 'bookmarks' %}">bookmarks</a></li>
                 <li><a href="{% url 'notifications' %}">notification history</a></li>
+                <li><a href="{% url 'password_change' %}">change password</a></li>
             </ul>
         </nav>
     </div>
