--- a/sic/static/style.css
+++ b/sic/static/style.css
@@ -434,6 +434,7 @@ body>footer {
   flex-flow: row;
   padding-top: 2rem;
   padding-bottom: 2rem;
+  gap: 1px;
 }
 
 body>footer>nav {
@@ -497,6 +498,12 @@ div.title>ul.tags {
   margin-left: auto;
 }
 
+a.title {
+ text-align: justify;
+ word-break: break-word;
+ hyphens: auto;
+}
+
 main>ul.posts>li.story .links{
   grid-area: links;
 }
@@ -556,7 +563,7 @@ form.submit-comment-form {
 
 div.profile {
   display: flex;
-  flex-flow: wrap-reverse;
+  flex-flow: wrap;
   row-gap: 1rem;
   column-gap: 2rem;
   max-height: max-content;
@@ -685,6 +692,11 @@ label.required:after {
 
 form.reply-form {
   display: none;
+  width: max-content;
+}
+
+textarea {
+  max-width: 50vw;
 }
 
 input[type="checkbox"].reply {
@@ -706,11 +718,15 @@ li.comment>span.links {
   column-gap: 4px;
   margin-right: 4px;
   margin-left: 2rem;
+  flex-flow: wrap;
 }
 
 span.comment {
   padding-top: .5rem;
   padding-bottom: .5rem;
+  text-align: justify;
+  hyphens: auto;
+  word-break: break-word;
 }
 
 span.comment.preview {
@@ -736,7 +752,6 @@ input[type="checkbox"].comment:checked~span.comment * {
 
 input[type="checkbox"].comment~span.comment{
   max-width: 66ch;
-  text-align: justify;
   margin-left: 2rem;
   display: block;
 }
@@ -952,8 +967,10 @@ tr.active-notification, tr.active-notification a {
 
 div.button-flex-box {
   display: flex;
+  flex-flow: wrap-reverse;
   flex-direction: row-reverse;
   column-gap: 1rem;
+  row-gap: .5rem;
 }
 
 details.formatting-help li {
