--- a/sic/templates/about.html
+++ b/sic/templates/about.html
@@ -2,13 +2,41 @@
 {% load humanize %}
 {% load utils %}
 {% block title %}about sic{% endblock %}
+{% block style %}
+    <link rel="stylesheet" href="/static/flair.css">
+{% endblock %}
 {% block content %}
+
+    <div class="sic-animation">
+        <div class="sic-animation__inner">
+            <span class="sic-animation__item"></span>
+            <span class="sic-animation__item"></span>
+            <span class="sic-animation__item"></span>
+            <span class="sic-animation__item"></span>
+            <span class="sic-animation__item"></span>
+            <span class="sic-animation__item"></span>
+            <span class="sic-animation__item"></span>
+            <span class="sic-animation__item"></span>
+            <span class="sic-animation__item"></span>
+            <span class="sic-animation__item"></span>
+            <span class="sic-animation__item"></span>
+            <span class="sic-animation__item"></span>
+            <span class="sic-animation__item"></span>
+            <span class="sic-animation__item"></span>
+            <span class="sic-animation__item"></span>
+            <span class="sic-animation__item"></span>
+            <span class="sic-animation__item"></span>
+            <span class="sic-animation__item"></span>
+            <span class="sic-animation__item"></span>
+            <span class="sic-animation__item"></span>
+        </div>
+    </div>
     <h1>about sic</h1>
-        <nav>
-            <ul>
-              <li><a href="{% url 'about_privacy' %}">Privacy Policy</a></li>
-              <li>Source code: <a href="https://github.com/epilys/sic/">https://github.com/epilys/sic/</a></li>
-              <li><a href="{% url 'invitation_tree' %}">User invitation tree</a></li>
-            </ul>
-        </nav>
+    <nav>
+        <ul>
+            <li><a href="{% url 'about_privacy' %}">Privacy Policy</a></li>
+            <li>Source code: <a href="https://github.com/epilys/sic/">https://github.com/epilys/sic/</a></li>
+            <li><a href="{% url 'invitation_tree' %}">User invitation tree</a></li>
+        </ul>
+    </nav>
 {% endblock %}
